GNU bug report logs - #12465
generalized-vector->list and shared arrays

Previous Next

Package: guile;

Reported by: Daniel Llorens <daniel.llorens <at> bluewin.ch>

Date: Tue, 18 Sep 2012 14:18:01 UTC

Severity: normal

Done: ludo <at> gnu.org (Ludovic Courtès)

Bug is archived. No further changes may be made.

To add a comment to this bug, you must first unarchive it, by sending
a message to control AT debbugs.gnu.org, with unarchive 12465 in the body.
You can then email your comments to 12465 AT debbugs.gnu.org in the normal way.

Toggle the display of automated, internal messages from the tracker.

View this report as an mbox folder, status mbox, maintainer mbox


Report forwarded to bug-guile <at> gnu.org:
bug#12465; Package guile. (Tue, 18 Sep 2012 14:18:01 GMT) Full text and rfc822 format available.

Acknowledgement sent to Daniel Llorens <daniel.llorens <at> bluewin.ch>:
New bug report received and forwarded. Copy sent to bug-guile <at> gnu.org. (Tue, 18 Sep 2012 14:18:01 GMT) Full text and rfc822 format available.

Message #5 received at submit <at> debbugs.gnu.org (full text, mbox):

From: Daniel Llorens <daniel.llorens <at> bluewin.ch>
To: bug-guile <at> gnu.org
Subject: generalized-vector->list and shared arrays
Date: Tue, 18 Sep 2012 16:15:36 +0200
	
There's a bug with generalized-vector->list and shared arrays. I have seen this kind of bug before, I'm not sure if it wasn't fixed last time or it has resurfaced somehow.

GNU Guile 2.0.6
Copyright (C) 1995-2012 Free Software Foundation, Inc.

Guile comes with ABSOLUTELY NO WARRANTY; for details type `,show w'.
This program is free software, and you are welcome to redistribute it
under certain conditions; type `,show c' for details.

Enter `,help' for help.
scheme@(guile-user)> (define a #2((1 2) (3 4)))
scheme@(guile-user)> (define b (make-shared-array a (lambda (j) (list 1 j)) 2))
scheme@(guile-user)> b
$1 = #(3 4)
scheme@(guile-user)> (generalized-vector->list b)
$2 = (1 2)
scheme@(guile-user)> (define c (make-shared-array a (lambda (i) (list i 1)) 2))
scheme@(guile-user)> c
$3 = #(2 4)
scheme@(guile-user)> (generalized-vector->list c)
ERROR: In procedure generalized-vector->list:
ERROR: In procedure vector-handle-ref: Value out of range: 18446744073709551615

Entering a new prompt.  Type `,bt' for a backtrace or `,q' to continue.
scheme@(guile-user) [1]> 

However generalized-vector-ref seems to work correctly.

I'm posting to guile-devel with my proposed ‘solution’.

Regards,

	Daniel





Information forwarded to bug-guile <at> gnu.org:
bug#12465; Package guile. (Tue, 18 Sep 2012 14:22:02 GMT) Full text and rfc822 format available.

Message #8 received at 12465 <at> debbugs.gnu.org (full text, mbox):

From: Daniel Llorens <daniel.llorens <at> bluewin.ch>
To: 12465 <at> debbugs.gnu.org
Subject: generalized-vector->list and shared arrays
Date: Tue, 18 Sep 2012 16:19:49 +0200
To clarify, the report above is for v2.0.6 (1321a36…)



Reply sent to ludo <at> gnu.org (Ludovic Courtès):
You have taken responsibility. (Fri, 02 Nov 2012 23:26:02 GMT) Full text and rfc822 format available.

Notification sent to Daniel Llorens <daniel.llorens <at> bluewin.ch>:
bug acknowledged by developer. (Fri, 02 Nov 2012 23:26:03 GMT) Full text and rfc822 format available.

Message #13 received at 12465-done <at> debbugs.gnu.org (full text, mbox):

From: ludo <at> gnu.org (Ludovic Courtès)
To: Daniel Llorens <daniel.llorens <at> bluewin.ch>
Cc: 12465-done <at> debbugs.gnu.org
Subject: Re: bug#12465: generalized-vector->list and shared arrays
Date: Sat, 03 Nov 2012 00:22:17 +0100
Hi Daniel,

I believe this is fixed in 1d4e6ee, which will be in 2.0.7.

I’ll reply to your suggestion on guile-devel.

Thanks!

Ludo’.




bug archived. Request was from Debbugs Internal Request <help-debbugs <at> gnu.org> to internal_control <at> debbugs.gnu.org. (Sat, 01 Dec 2012 12:24:03 GMT) Full text and rfc822 format available.

This bug report was last modified 11 years and 146 days ago.

Previous Next


GNU bug tracking system
Copyright (C) 1999 Darren O. Benham, 1997,2003 nCipher Corporation Ltd, 1994-97 Ian Jackson.